# discord-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
discord_webhook_client/: __init__.py  client.py  models.py
tests/: test_client.py  test_client_e2e.py  test_client_unit.py
