[project]
name = "discord-webhook-client"
version = "0.1.0"
description = "Lightweight Discord webhook client with dataclass payload helpers."
authors = [{ name = "Squad", email = "dev@squad.local" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://example.com/discord-webhook-client"
Repository = "https://example.com/discord-webhook-client"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.uv]
package = true
