[project]
name = "discord-webhook-client"
version = "0.1.0"
description = "Lightweight Discord webhook client with dataclass payload helpers."
authors = [{ name = "Squad", email = "dev@squad.local" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/1995parham/discord-py"
Repository = "https://github.com/1995parham/discord-py"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[dependency-groups]
dev = ["mypy>=1.19.0", "ruff>=0.14.9", "pytest>=8.3", "pytest-httpx>=0.30"]
